Kubernetes/Application/BackEnd/Development/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-user-deployment
  namespace: application
  labels:
    app: backend-user
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0%
  selector:
    matchLabels:
      app: backend-user
  template:
    metadata:
      labels:
        app: backend-user
    spec:
      containers:
      - name: backend-user
        imagePullPolicy: Always
        image: .
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /api/post/health
            port: 80
          initialDelaySeconds: 80
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/post/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "128m"
          limits:
            memory: "512Mi"
            cpu: "256m"
      imagePullSecrets:
        - name: aws-registry
